// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalWindow render modal window with Head, Body and Buttons correctly 1`] = `
<Modal
  center={true}
  classNames={
    Object {
      "closeButton": "modal-window__close",
      "modal": "modal-window",
      "overlay": "modal-overlay",
    }
  }
  closeOnOverlayClick={true}
  focusTrapped={false}
  onClose={[Function]}
  open={true}
  styles={
    Object {
      "closeIcon": Object {
        "display": "none",
      },
    }
  }
>
  <div
    className="modal-window__head"
  >
    Head
  </div>
  <div
    className="modal-window__body"
  >
    Test Text
  </div>
</Modal>
`;

exports[`ModalWindow render modal window with defaults correctly 1`] = `
<Modal
  center={true}
  classNames={
    Object {
      "closeButton": "modal-window__close",
      "modal": "modal-window",
      "overlay": "modal-overlay",
    }
  }
  closeOnOverlayClick={true}
  focusTrapped={false}
  onClose={[Function]}
  open={true}
  styles={
    Object {
      "closeIcon": Object {
        "display": "none",
      },
    }
  }
>
  Test Text
</Modal>
`;

exports[`ModalWindow render small modal window with Head, Body and Buttons correctly 1`] = `
<Modal
  center={true}
  classNames={
    Object {
      "closeButton": "modal-window__close",
      "modal": "modal-window modal-window--small",
      "overlay": "modal-overlay",
    }
  }
  closeOnOverlayClick={true}
  focusTrapped={false}
  onClose={[Function]}
  open={true}
  styles={
    Object {
      "closeIcon": Object {
        "display": "none",
      },
    }
  }
>
  <div
    className="modal-window__head"
  >
    Head
  </div>
  <div
    className="modal-window__body"
  >
    Test Text
  </div>
</Modal>
`;
